kubecost-mpol/enable-kubecost-continuous-rightsizing/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enable-kubecost-continuous-rightsizing
policies:
- ../enable-kubecost-continuous-rightsizing.yaml
resources:
- resource.yaml
- exception-resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: Deployment
  patchedResources: patchedResource1.yaml
  policy: enable-kubecost-continuous-rightsizing
  resources:
  - deploy02
  result: pass
  isMutatingPolicy: true
- kind: Deployment
  policy: enable-kubecost-continuous-rightsizing
  resources:
  - deploy01
  result: skip
  isMutatingPolicy: true
- kind: Deployment
  policy: enable-kubecost-continuous-rightsizing
  resources:
  - deploy03
  result: skip
  isMutatingPolicy: true
